--- a/band_02/schwarze_hand/schwarze-hand.tex
+++ b/band_02/schwarze_hand/schwarze-hand.tex
@@ -1,26 +1,3 @@
-\begin{center} 
-    Ein Abenteuer für 3--6 angehende Heldinnen und Helden (2.000 EP)
-\end{center}
-
-\vfill
-
-%
-%\credit{Layout}{
-%Tilmann Kircher
-%}
-\credit{Lektorat}{
-Ralf Luger, Jörg Rüdenauer
-}
-
-
-\credit{Mit Dank an meine Testspielerinnen und Testspieler}{
-Gianni Bischoff, Felipe Cardoso Kircher, Laura Cardoso Kircher, 
-Silvia Cardoso Schöller,\\ Stefan Ivenz, Peter Lichtenwagner,
-Ralf Luger, Julian Römer und Jörg Rüdenauer 
-}
-
-\vfill
-
 \spaltenanfang
 
 \abschnitt{Vorwort}
@@ -35,8 +12,6 @@ der frühen DSA-Jahre („Wie Sand in Rastullahs Hand“), allerdings geht es nu
 Räuberbande der „Schwarzen Hand“, denn von ihnen wird den Charakteren im Verlauf des Abenteuers 
 bloß noch ein kläglicher Rest begegnen.
 \geschichte{}{\textit{Tilmann Kircher}, im Februar 2024}
-
-\neueseite
 
 \abschnitt{Einleitung}
 
@@ -56,6 +31,8 @@ Da es sich bei den Goblins und den Räubern um eine recht große Anzahl an Gegne
 \platz
 Sollten die SC den Kampf mit den Goblins gesucht und dieser viel Zeit in Anspruch gekostet haben, macht es Sinn, anstelle der Räuber nurmehr ein verlassenes Lager mit Hinweis auf die \textbf{„Schwarze Hand“} einzuführen.
 }
+
+\neuespalte
 
 \abschnitt{Hintergrund}
 Im Peraine des Jahre 1027 BF befreite die Borbaradianerin \textbf{Charissia von Salmingen} den elementaren Flammenadler \textbf{Alagrimm} aus seinem Gefängnis im Zwergenreich \textbf{Koschim} und verheerte große Teile des nördlichen \textbf{Kosch}s.
@@ -82,6 +59,7 @@ Die Charaktere müssen also die Vermittler spielen, zunächst die Gedankengänge
 
 Das Abenteuer startet in \textbf{Vittel}s Heimatdorf, in welchem die Charaktere gebeten werden, den mittlerweise vermissten \textbf{Vittel} zu suchen. 
 
+\neuespalte
 
 \abschnitt{Auf ins Abenteuer}
 \vorlesen{Bei \textbf{Hesindelburg} hattet ihr die Reichsstraße verlassen und konntet gestern am Fuße der immer höher aufragenden \textbf{Kosch}berge die noch junge \textbf{Ange} überqueren, der ihr weiter ins Herz des Reiches zu folgen beabsichtigtet.
@@ -94,7 +72,7 @@ Ein kleiner Bach durchquert Lichtung und Ort, der aus sechs Gehöften, einem kle
 Der prächtigste Hof, direkt neben dem Tor in der Palisade, wirkt allerdings verlassen.
 Der hellste Lichtschein strahlt aus der Schmiede.
 \begin{center}
-\zeichnung[0.27\textwidth]{schmied.png}
+\zeichnung[\columnwidth]{schmied.png}
 \end{center}
 
 Schmiedin \textbf{Angunde} bietet dort neben dem hellen Angenburger Bier auch ihren selbstgebrannten Korn an, weshalb die kleine Stube am Ende des Tagwerks stets gut gefüllt ist.
@@ -134,23 +112,24 @@ Abgesehen davon kann eigentlich auch keine Hand entbehrt werden, da alle beim mo
 Falls die Charaktere die Einheimischen nicht von sich selbst aus ansprechen sollten, wird ihnen \textbf{Angunde} spätestens beim Auftragen der warmen Speisen den Grund der Diskussion mitteilen.
 
 \info{
-Die Probe auf Gebräuche ist für die Handlung nicht vonnöten, dient also nur dem Test der Probenmechanik.
+Die Probe auf Gebräuche ist für die Handlung nicht vonnöten, dient also nur dem Test der Probenmechanik.}
 
+\info{
 Der Autor dieses Abenteuers geht jetzt davon aus, dass die Charaktere so heldenhaft sind, den Boggerodern ihre Hilfe anzubieten, zumal sie auf ihrem Weg sicherlich durch Wengenholm kommen müssen.
  Der weitere Text des Abenteuers beruht daher auf dieser Annahme. Es ist natürlich auch möglich, dass die Charaktere anbieten, beim Schlachtfest zu helfen, damit zum Beispiel Vater \textbf{Peraintreu} selbst nach seinem Schützling suchen gehen kann.
  Dann musst du als SL massiv improvisieren.
  Wichtig ist, dass das Blut der geschlachteten Tiere nicht zu früh gerinnt, sonst drohen schwerste Lebensmittelvergiftungen.
 }
 
-\zeichnung{Essen.JPG}
-
-\vfill
+%\zeichnung{Essen.JPG}
+%
+%\vfill
 
 \kasten{
 In dem unwahrscheinlichen Fall, dass die Charaktere kein Interesse am Verbleib \textbf{Vittel}s zeigen, beginnt jetzt für die ganze Spielrunde die Suche nach einem passenden Brettspiel für den Rest des Abends.
 }
 
-\newpage
+%\newpage
 
 \abschnitt{Am nächsten Morgen}
 
@@ -172,7 +151,7 @@ Die Goblins sind wachsam und rechnen durchaus mit einem Angriff durch die Charak
 \kreaturgoblin
 \textbf{Sulrik:} WS +1/+2, Initiative +2, AT/VT +2, TP +1
 
-\zeichnung[0.45\textwidth]{Goblin.png}
+\zeichnung[0.4\textwidth]{Goblin.png}
 
 
 Regeltechnisch haben die Bogenschützen die \emph{Aktion Verzögern} gewählt und würden selbst bei niedrigerer Initiative als die Charaktere sofort (natürlich mit einem Malus von -4, \textit{Ilaris:37}) schießen, während die Speerkämpfer sich in \textit{voller Verteidigung} befinden und hinter den Baumstämmen eine \emph{vorteilhafte Position} einnehmen.
@@ -213,12 +192,12 @@ Die Goblins werden nicht bis zum Tode kämpfen, ein einfacher Goblin mit drei od
 Sollte Sulrik fliehen, wird auch der Rest der Bande die Flucht ergreifen.
 Sollten die Goblins siegen, werden sie den Charakteren alle Habseligkeiten abnehmen, ihnen aber kein weiteres Leid zufügen.
 Der Rest des Abenteuers dürfte dann jedoch schwieriger werden. 
-
-\platz
-
-\zeichnung{rededuell.jpg}
-
-\platz
+%
+%\platz
+%
+%\zeichnung{rededuell.jpg}
+%
+%\platz
 
 \abschnitt{Wengenholm}
 
@@ -431,6 +410,11 @@ Der \textbf{Burgvogt} wird den Charakteren außer den 5 Dukaten Kopfgeld pro Rä
 \abschnitt{Der Mühen Lohn}
 Neben den Alchimika und den hoffentlich durch die Ergreifung der Räuber verdienten Dukaten gibt es auch noch \textit{30 EP} für die durchgemachten Strapazen.
 
+\spaltenende
+
+\platz
+
+\spaltenanfang
 
  
 
