--- a/band_02/bergkoenig/in-den-hallen-des-bergkoenigs.tex
+++ b/band_02/bergkoenig/in-den-hallen-des-bergkoenigs.tex
@@ -433,6 +433,12 @@ Mit dieser Information kann die Gruppe eine \emph{Ermittlung} anstellen, die den
 Für den nächsten Tag wird der \textbf{Tiefe Rat} erneut zusammengerufen.
 }
 
+\bigskip
+
+\begin{center}
+\bild[0.85\textwidth]{Zwergenrat.jpg}
+\end{center}
+
 \spaltenanfang
 
 \textbf{Barselok} setzt an:
