--- a/band_02/klamm_und_heimlich/klamm-und-heimlich.tex
+++ b/band_02/klamm_und_heimlich/klamm-und-heimlich.tex
@@ -1,36 +1,3 @@
-\begin{center}
-
-\usekomafont{section}
-	
-Ein Dungeon-Gruppenabenteuer - Ein Beitrag zum 2.\,Ilaris Abenteuerwettbewerb
-
-
-\platz
-
-Impressum
-
-\normalfont
-
-\end{center}
-
-\credit{Text \& Kontakt}
-{Matthias Thanos -- [vorname].[nachname]<ätt>gmx[Pünktchen]de}
-
-
-\credit{Lektorat}{
-Elisabeth Schmitt}
-
-\credit{Danksagung}{Danke an alle, die an einer der vier Testrunden teilgenommen haben!}
-
-%\credit{Layout \& Dokumentgenerierung}
-%{Matthias Thanos\\ \url{https://brauerei.ilaris-online.de}}
-
-\credit{Ilaris-Artwork}{\href{https://www.artstation.com/bernhard\_eisner}{Bernhard Eisner}}
-
-\credit{Titelbild, Karte}{Matthias Thanos}
-
-\neueseite
-
 \spaltenanfang
 
 
@@ -243,6 +210,8 @@ Was, immer noch nicht?? Na warte, bis ich mit dir fertig bin \dots“
 }
 Durch den Türspalt kann man drei bis fünf mit \textbf{Arbach}-Säbeln bewaffnete Ork-Krieger \emph{(Ilaris:104)} beobachten. Auf dem Tisch liegt das Kurzschwert des Knappen (mit Gut-Nebelstein-Gravur auf dem Knauf).
 
+\zeichnung[0.3\textwidth]{Goblin.png}
+
 Hauptork \textbf{Siburash Eberschrei} (Kriegshammer, Nasenring, trägt gut sichtbar einen Schlüsselbund mit dem Schlüssel zu Alfdans Ketten) und Wachork \textbf{Blorg} (Hasenscharte) verhören gerade gewaltsam den an der Wand gegenüber in Ketten gelegten Knappen \textbf{Alfdan} (dunkelblonder Bürstenschnitt, pummelig, Doppelkinn, gutmütig; aktuell kampfunfähig mit fünf Punkten Erschöpfung und nicht imstande zu gehen, Werte wie \emph{Stadtwache}, \emph{Ilaris:107}).
 
 
@@ -345,24 +314,17 @@ Ein Fall für (ahnungslose!) Helden!
 Falls du den Handlungsfaden hier enden lassen willst, dann ist \textbf{Treudane} noch nicht untergetaucht und hat auch ihre Aufzeichnungen zum orkischen Kriegsartefakt noch in ihrem Zimmer liegen.
 Äußern die Helden einen Verdacht, werden diese Aufzeichnungen entdeckt und \textbf{Treudane} eingekerkert.
 
-
-\spaltenende
-
 \neueseite
 
-\abschnitt{Anhang}
-
-\spaltenanfang
-
-\absatz{Kampfwerte}
+\subsection{Anhang: Kampfwerte}
 
 \kreatur{Greifax}{\enquote{Mächtiger} Meckerdrache}{mythen}{
 	\label{greifax}
-    \kreaturkampfwerte{4/6}{8}{1, fliegend 12}{5}
-    \trennlinie
+	\kreaturkampfwerte{4/6}{8}{1, fliegend 12}{5}
+	\trennlinie
 	\kreaturattribute{KK 6, KO 6, KL 4, IN 8, FF 2, GE 4, MU 4}
-    \trennlinie
-    \kreaturwaffe{Klauen}{0}{6}{10}{2W6+1}{Sturmangriff (max +6 TP)}
+	\trennlinie
+	\kreaturwaffe{Klauen}{0}{6}{10}{2W6+1}{Sturmangriff (max +6 TP)}
 	\kreaturwaffe{Feuerodem}{4}{1}{12}{2W6+2}{Flächenangriff (90° vor dem Drachen), Nachbrennen}
 	\trennlinie
 	\kreaturinfo{Kampfverhalten}{Bei Gefahr stellt sich Greifax bei der ersten sich bietenden Gelegenheit theatralisch tot.}
@@ -378,7 +340,8 @@ Falls du den Handlungsfaden hier enden lassen willst, dann ist \textbf{Treudane}
 	\trennlinie
 	\kreaturinfo{Kleidung}{Schmiedeschürze (verleiht Resistenz I gegen Feuer).}
 }
-	
+
+\neuespalte
 
 \kreatur{Ork-Schamane}{Shurrak Windzahn, Schamane des Schwarzen Banners}{humanoid}{
 	\label{shurrak}
@@ -389,36 +352,14 @@ Falls du den Handlungsfaden hier enden lassen willst, dann ist \textbf{Treudane}
 	\kreaturwaffe{Knochenkeule}{1}{10}{10}{2W6+1}{Kopflastig, Stumpf, Niederwerfen}
 	\trennlinie
 	\kreaturinfo{Zauber}{Tairachs Krieger \textit{Ilaris:164}, 
-	Brazoraghs Hieb (\textit{Ilaris:164}) ist bereits in Knochenkeule eingerechnet, 
-	Geistertausch (\textit{Ilaris:165}})
-
+		Brazoraghs Hieb (\textit{Ilaris:164}) ist bereits in Knochenkeule eingerechnet, 
+		Geistertausch (\textit{Ilaris:165}})
+	
 	\kreaturinfo{Geistertausch}{Der Schamane hat sich ein paar Schuppen von Greifax gesichert 
-	und könnte die Flucht behindern, 
-	indem er mit ihm die Seele tauscht und den Helden mit dem Flammenodem den Ausweg versperrt. 
-	Seinen eigenen Körper lässt er währenddessen von zwei Ork-Kriegern festhalten.
-	Wenn er in Eile ist, verringert der Schamane die Vorbereitungszeit mittels der Modifikation 
-	\textit{Vorbereitungszeit verkürzen} (\textit{Ilaris:71}) von 16 auf 8 Aktionen.}
+		und könnte die Flucht behindern, 
+		indem er mit ihm die Seele tauscht und den Helden mit dem Flammenodem den Ausweg versperrt. 
+		Seinen eigenen Körper lässt er währenddessen von zwei Ork-Kriegern festhalten.
+		Wenn er in Eile ist, verringert der Schamane die Vorbereitungszeit mittels der Modifikation 
+		\textit{Vorbereitungszeit verkürzen} (\textit{Ilaris:71}) von 16 auf 8 Aktionen.}
 }
-
-
-\subsection[Handouts]{Handout 1: Der Brief}
-\label{kuh_ho1}
-\kasten{
-\handschrift
-Mächtiger Shurrak,\\
-in vier Tagen wird der weiche Wurm vom Markt zurückkehren. Er weiß alles, was ihr braucht, um N. zu besetzen. Denkt daran, wozu wir gemeinsam fähig sind, wenn wir endlich das alte Orkblut bergen!
-
-\begin{flushright}
-    -- D.
-\end{flushright}
-}
-
 \spaltenende
-
-\subsection*{Handout 2: Die Höhlenkarte}
-\label{kuh_ho2}
-
-\begin{center}
-\vfill
-\bild[0.79\textwidth]{Karte3.png}
-\end{center}
